@@ -118,6 +118,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <jvmArguments>--add-opens java.base/java.time.chrono=ALL-UNNAMED</jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
